--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
+<html>
+  <body>
+<script>
+ Calculo do número
+var num = Math.round(100*(Math.random()))
+var num_in, x=50, tentativas=0
 
+
+
+</script>
+
+  </body>
+
+</html>
