--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 var num = Math.round(100*(Math.random()))
 var num_in, x=50, tentativas=0
 
+wlile (true){
+num in = prompt("Adivinha o  número. (0-100): ", x)
 
+
+}
 
 </script>
 
