--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
   <body>
 <script>
- Calculo do número
+ //Calculo do número
 var num = Math.round(100*(Math.random()))
 var num_in, x=50, tentativas=0
 
-wlile (true){
-num in = prompt("Adivinha o  número. (0-100): ", x)
+while (true){
+num_in = prompt("Adivinha o  número. (0-100): ", x)
 
 
 }
