--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@ var num_in, x=50, tentativas=0
 
 while (true){
 num_in = prompt("Adivinha o  número. (0-100): ", x)
-
+tentativas++ //incremneta
+if(num_in == num) break //Para
 
 }
 
