--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@ num_in = prompt("Adivinha o  número. (0-100): ", x)
 tentativas++ //incremneta
 if(num_in == num) break //Para
 
+if(num_in > num){
+ alert("O número é menor, Tente de novo...")   
+}
+
 }
 
 </script>
