--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ if(num_in == num) break //Para
 
 if(num_in > num){
  alert("O número é menor, Tente de novo...")   
-}
+} else{ alert("O número é maior, Tente de novo...")
 
 }
 
