--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@ if(num_in > num){
 } else{ 
     alert("O número é maior, Tente de novo...")
 
-}}
+}
+   x = num_in
+}
+
+document.write("<h4>Número:", num, "<p></h4>")
+document.write("<h4>Tentativas:", tentativas, "<p></h4>")
+
+
+
 
 </script>
 
